# LMS_DRF

./: .env_sample  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_last_update.py  0005_lesson_updated_at.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: populate_db.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_payment_session_id.py  0004_alter_user_last_login.py
